--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -72,13 +72,15 @@
     <Compile Include="Assets\Scripts\Difficulty\Difficulty.cs" />
     <Compile Include="Assets\Scripts\Game Event Scripts\GameEvent.cs" />
     <Compile Include="Assets\Scripts\GameUIScripts\DiedPanelButtonScript.cs" />
-    <Compile Include="Assets\Scripts\MenuScripts\MenuScript.cs" />
     <Compile Include="Assets\Scripts\Platform\Platform.cs" />
     <Compile Include="Assets\Scripts\Player Scripts\Movement.cs" />
     <Compile Include="Assets\Scripts\Player Scripts\PlayerDead.cs" />
+    <Compile Include="Assets\Scripts\Player Scripts\SetPlayerSprite.cs" />
     <Compile Include="Assets\Scripts\ScreenCollider\ScreenCollider.cs" />
     <Compile Include="Assets\Scripts\ShopScripts\ButtonExtension.cs" />
+    <Compile Include="Assets\Scripts\ShopScripts\Profile.cs" />
     <Compile Include="Assets\Scripts\ShopScripts\Shop.cs" />
+    <Compile Include="Assets\Scripts\ShopScripts\UpdateAllCoinsText.cs" />
     <Compile Include="Assets\Scripts\Spawner\Spawner.cs" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
