--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Assets\Scripts\CoinScripts\CoinSpawner.cs" />
     <Compile Include="Assets\Scripts\Difficulty\Difficulty.cs" />
     <Compile Include="Assets\Scripts\Game Event Scripts\GameEvent.cs" />
+    <Compile Include="Assets\Scripts\GameManager\GameManager.cs" />
     <Compile Include="Assets\Scripts\GameUIScripts\DiedPanelButtonScript.cs" />
     <Compile Include="Assets\Scripts\Platform\Platform.cs" />
     <Compile Include="Assets\Scripts\Player Scripts\Movement.cs" />
